feat(security): US-065, US-066 — rate limiting, security headers, CORS and JTI